[package]
name = "abl-srfc37"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "abl_srfc37"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = [
    "token_2022_extensions",
    "token_2022",
] }

solana-instruction = "=2.2.1"
ebalts-interface = { git = "https://github.com/tiago18c/ebalts"}
ebalts = { git = "https://github.com/tiago18c/ebalts", features = ["no-entrypoint"]}
spl-discriminator = "0.4.1"
spl-tlv-account-resolution = "0.10.0"
